# Hyperion

./: CMakeLists.txt  README.md  test.ppm
src/: main.cpp
src/base/: StandardIncludes.h
src/graphics/: Camera.h  Color.h  Geometry.h  GeometryList.h  Material.h  Ray.h  Sphere.h
src/graphics/materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h
src/math/: Constants.h  Vec3.h
src/math/test/: ExponentialsTestDouble.h  ExponentialsTestFloat.h  GeneralTestDouble.h  GeneralTestFloat.h  TrigFuncsTestDouble.h  TrigFuncsTestFloat.h  Vec2Test.h  Vec3Test.h
src/test/: RayTracerTest.cpp
src/utils/: Concepts.h  RingBuffer.h  TypeTraits.h
src/utils/test/: RingBufferTest.h
